[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromark"
version = "0.0.4"
authors = [
  { name="ken", email="block24block@gmail.com" },
]
description = "Read chrome bookmark file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
chromark = "chromark:cli"

[project.urls]
Homepage = "https://github.com/turnon/chromark"